--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -18,9 +18,11 @@
 				experience will prove to be invaluable.   
     		   	</p>
 				
-			<p>Ronnie is very proud to have trained two individuals (one man, one woman) to 
+			<p>Ronnie is proud to have trained two individuals (one man, one woman) to 
 				run in their first marathons.  With his guidance they went on to qualify for the 
-				U.S. Olympic Trials.
+				U.S. Olympic Trials.  Ronnie is equally proud of his success in assisting runner of
+				all abilities achieve their running goals.  He gets great satisfaction from observing
+				the progress being made by the individuals he is working with.
 			</p>
 		</div>
 
@@ -28,24 +30,23 @@
 		<div class="span6">
 			<p class="sectionHeadings">Credentials and Accolades</p>
 			<ul>
-				<li>1990 - Ph D, Biodynamics, General</ br>
+				<li>1990 - Ph D, Biodynamics</ br>
 					University of Wisconsin - Madison</ br>
 					Madison, Wisconsin
 				</li>
 			
-				<li>1983 - MS, Physical Education - Teacher Education</ br>
+				<li>1983 - MS, Physical Education</ br>
 					South Dakota State University</ br>
 					Brookings, South Dakota
 				</li>
 				
-				<li>1979 - BS, Physical Education/History, Athletic Coaching, Summa cum laude</ br>
+				<li>1979 - BS, Physical Education/History, Athletic Coaching</ br>
 					Black Hills State University</ br>
 					Spearfish, South Dakota
 				</li>
 				<li>NSCA Certified Strength and Conditioning Specialist</li>
 				<li>Successful high school track and cross-country coach</li>
 				<li>Coach for a college running club </li>
-				<li>Participated in 40+ marathons</li>
 				<li>Experience training one-on-one and group distance training with many individuals</li>
 				<li>18 Years experience instructing university marathon training class</li>
 				<li>10+ years online marathon class through university alumni association</li>
