--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,24 +16,52 @@
 		<div class="span4">
 			<p class="sectionHeadings">My Training Philosophy</p>
 		
-			<p>As your trainer, my goal is to assist you in accomplishing your goals as a long distance runner.  
-				I wish to provide you with the habits to 
-				maintain good health and a high quality of life.
+			<p>As your trainer, my objective is to assist you in accomplishing your distance 
+				running goals.  Although my focus is on training individuals for the half and full 
+				marathon, I am also capable and delighted to work with individuals who may be 
+				considering a move up to the 10K distance from 5K or, for that matter, figuring 
+				out how to get a good start in running.  Ultimately, I wish to provide you with 
+				the habits to maintain good health, a high quality of life, and promote distance 
+				running as a lifelong activity.  
 			</p>
 
-			<p> An individual's training program should be a process that can be enjoyed and also provide
-       			the preparation needed to complete a targeted event.  The key to achieving 
-				your goals as a long distance runner is to focus on the training process.  I will 
-				provide you with an educational and positive training experience that will keep 
-				you participating.
+			<p> An individual's training program should be a process that can be enjoyed and 
+				also provide the preparation needed to complete a targeted event.  The key to 
+				achieving your goals as a distance runner is to focus on the training process.  I 
+				will provide you with an educational and positive training experience that will 
+				keep you participating.
 			</p>
 		</div>
 		
 		<div class="span4">
 			<p class="sectionHeadings">Why You Should Choose Next Level Distance Running</p>
-			<p>Why might you need a trainer?</p>
-			<p>How can a trainer help you?</p>
-			<p>What a trainer can do for you</p>
+			<p><strong>Why might you need a trainer?</strong>
+				There are a number of reasons that individuals obtain a trainer's assistance.  A 
+				trainer can provide the needed structure or direction in your training.  A trainer 
+				can provide the needed variety of training activities to help you achieve your 
+				goals.  A trainer can provide the needed role of a supervisor to the training and 
+				the encouragement sometimes needed to stay the course.  Hiring a trainer is a 
+				commitment that you are making to yourself and in doing so, you are 
+				re-enforcing your commitment to achieve your goals. 
+			</p>
+			<p><strong>How can a trainer help you?</strong>
+				A trainer can help you develop a good training routine, one that is designed to 
+				fit your needs, based on your time availability, fitness level, and many other 
+				factors.  A trainer can help you understand why you are doing the training and 
+				the specific workouts you are doing.  Your understanding of the process of 
+				training should help your training become more efficient, as you will know the 
+				purpose behind each of your workouts.  When you go out the door to do a run, 
+				you should know what you are trying to accomplish in this workout and this can 
+				occur with the help of a trainer.
+			</p>
+			<p><strong>What a trainer can do for you</strong> - A trainer can make the training more enjoyable.  
+				A trainer can take your feedback and utilize this to develop workouts that meet 
+				your specific needs.  A trainer can analyze your running form and make 
+				suggestions on how to improve your running economy.  A trainer can identify 
+				appropriate paces for a variety of workouts and running distance.  A trainer can 
+				provide helpful suggestions for race pace and race strategy so you will get the 
+				most from your training and event experience.
+			</p>
 			<p>Invest in yourself!  Your time commitment and race entry fee, especially for a 
 				half or full marathon, are significant. You want to get the most out of your 
 				investment to have a positive race experience and achieve your goals.
