--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,7 +9,7 @@
 		<p class="opening">Want to take your running to the next level?<p>
 		<p class="opening">Looking for a new running challenge? (maybe a half or full marathon)</p>
 		<p class="opening">Perhaps your trying to improve your running performance times/set a new PR?</p>
-		<h3> Next Level Distance Running can help you achieve these goals!</h3>
+		<h3> Next Level Distance Running can help you achieve these goals! STUB FOR TEST</h3>
 	</div>
 	<div class="row-fluid">
 		
