carda training logo complete

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container-fluid">
-      <%= link_to "Carda Training", root_path, id: "logo" %>
+      <%= link_to image_tag("carda_training_logo.png", :id=> "logo"), root_path %>
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home",    root_path %></li>
