background image added to home page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -58,6 +58,14 @@ label {
 }
 /*Home Page styling*/
 
+.hero-unit {
+	background: url('/assets/winding_road.jpg');
+	background-size: 100%;
+	background-repeat: no-repeat;
+	color: white;
+	
+}
+
 #homeCaption {
 	font-size: 8pt;
 	text-align: center;
@@ -75,16 +83,10 @@ label {
 //Header Style
 .navbar .nav > li > a {
 	color: white;
-	padding-top: 20px;
 }
 
 #logo {
   float: left;
-  text-align: center;
-  &:hover {
-    color: #fff;
-    text-decoration: none;
-  }
 }
 
 //Title art
