--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
 	<nav>
     		<div class="text-center">
 			<%= link_to(image_tag("paypal.png"), "https://www.paypal.com/", :id => "paypal", :title =>"PayPal") %>
-			<%= link_to(image_tag("facebook_icon.png"), "https://www.facebook.com/", :id => "facebook", :title =>"Facebook") %>
+			<%= link_to(image_tag("facebook_icon.png"), "https://www.facebook.com/cardatraining", :id => "facebook", :title =>"Facebook") %>
     			<ul class="nav nav-pills center-pills">
       				<li class="active"><%= link_to "Home",    root_path %></li>
       			  	<li class="active"><%= link_to "Training Programs",    training_programs_path %></li>
