--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'About the Trainer') %>
 
-<div class="container-fluid">
+<div class="container-fluid artTitle">
 	<%= render 'layouts/titleArt' %>
 </div>
 
