--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Contact') %>
-<div class="container-fluid">	
+<div class="container-fluid artTitle">	
 	<%= render 'layouts/titleArt' %>
 </div>
 
