--- a/app/views/static_pages/training_programs.html.erb
+++ b/app/views/static_pages/training_programs.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Training Plans') %>
-<div class="container-fluid">
+<div class="container-fluid artTitle">
 	<%= render 'layouts/titleArt' %>
 </div>
 
