--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,11 +5,11 @@
 <div class="container-fluid">
 	<%= render 'layouts/addressDiv' %>
 	<div class="center hero-unit">
-		<p class="opening">Are you new to running?</p>
-		<p class="opening">Want to take your running to the next level?<p>
-		<p class="opening">Looking for a new running challenge? (maybe a half or full marathon)</p>
-		<p class="opening">Perhaps your trying to improve your running performance times/set a new PR?</p>
-		<h3> Next Level Distance Running can help you achieve these goals!</h3>
+		<p class="opening" id="new">Are you new to running?</p>
+		<p class="opening" id="nextLevel">Want to take your running to the next level?<p>
+		<p class="opening" id="challenge">Looking for a new running challenge? (maybe a half or full marathon)</p>
+		<p class="opening" id="performance">Perhaps your trying to improve your running performance times/set a new PR?</p>
+		<h3 id="distance">Next Level Distance Running can help you achieve these goals!</h3>
 	</div>
 	<div class="row-fluid">
 		
