--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,9 +2,9 @@
 @import "bootstrap";
 
 html {
-	background: url('/assets/black_road_surface_208169.jpg');
-	//background-repeat: no-repeat;
-	//background-size: cover;
+	background: url('/assets/asphalt_texture430.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .navbar {
