jumbotron background updated and home page layout changed

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -57,8 +57,7 @@ label {
 /*Home Page styling*/
 
 .hero-unit {
-	background: url('/assets/navbar_background.png');
-	//background-color: black;
+	background: url('/assets/jumbotron_bg.png');
 	background-size: 100%;
 	background-repeat: no-repeat;
 	background-size: cover;
