--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -33,8 +33,15 @@
 			</p>
 		</div>
 		
-		<div class="span4">
-			<p class="sectionHeadings">Why You Should Choose Next Level Distance Running</p>
+		<div class="span8">
+			<%= image_tag("runner_jogging_morning.jpg") %>
+		</div>
+	</div>
+	
+	<div class="row-fluid">
+		
+		<div class="span12">
+			<p class="sectionHeadings">Next Level Distance Running-The Right Choice</p>
 			<p><strong>Why might you need a trainer?</strong>
 				There are a number of reasons that individuals obtain a trainer's assistance.  A 
 				trainer can provide the needed structure or direction in your training.  A trainer 
@@ -81,8 +88,10 @@
   	     	      	     	      doing what you are doing in your training</li>
 			</ul>
 		</div>
+	</div>
 		
-		<div class="span4">
+	<div class="row-fluid">
+		<div class="span12">
 			<p class="sectionHeadings">Packages Offered</p>
 			
 			<p class="sectionHeadings">Online Training Program</p>
