added copyright to footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,7 +9,8 @@
       			  	<li class="active"><%= link_to "About the Trainer",    about_path %></li>
       			  	<li class="active"><%= link_to "Contact",    contact_path %></li> 
 			</ul>
-			<p>Located in Madison, Wisconsin</p>
+			<p>&#169; All Rights Reserved by Ronnie Carda</p>
+			<p>Website Designed by Dan Yachcik</p>
 		</div>
   	</nav>
 </footer>
