--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -74,9 +74,12 @@ label {
 }
 
 .sectionHeadings {
-	font-size: 13pt;
-	font-weight: bold;
-	
+	font-size: 16pt;
+	font-weight: bold;	
+}
+
+#homePackages {
+	margin-top: 20px;
 }
 //Header Style
 .navbar .nav > li > a {
