--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -33,14 +33,14 @@
 			</p>
 		</div>
 		
-		<div class="span8">
+		<div class="span8 runningPic">
 			<%= image_tag("runner_jogging_morning.jpg") %>
 		</div>
 	</div>
 	
 	<div class="row-fluid">
 		
-		<div class="span12">
+		<div class="span12" id="choice">
 			<p class="sectionHeadings">Next Level Distance Running-The Right Choice</p>
 			<p><strong>Why might you need a trainer?</strong>
 				There are a number of reasons that individuals obtain a trainer's assistance.  A 
@@ -90,11 +90,11 @@
 		</div>
 	</div>
 		
-	<div class="row-fluid">
+	<div class="row-fluid" id="homePackages">
 		<div class="span12">
 			<p class="sectionHeadings">Packages Offered</p>
 			
-			<p class="sectionHeadings">Online Training Program</p>
+			<p><strong>Online Training Program</strong></p>
 			
 			<p>The Online Training Package is an excellent choice for runners seeking to reach 
 				the next level on their own.  This package offers great videos and power points 
@@ -104,7 +104,7 @@
 			       to get all of the details of this package and the pricing.
 			</p>
 				 
-	    		<p class="sectionHeadings">Face to Face Training Program</p>
+	    		<p><strong>Face to Face Training Program</strong></p>
 	      		
 			<p>This is the best training package to optimize your effort with your trainer and to stay on
 				course with your training plan.  In addition to all of the benefits of the Online
