ronnie picture added to About the Trainer page and layout altered

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -7,7 +7,11 @@
 <div class="container-fluid">
 	<%= render 'layouts/addressDiv' %>
 	<div class="row-fluid">
-		<div class="span6">
+		<div class="span2">
+			<%= image_tag("ronnie.jpg") %>
+		</div>
+		
+		<div class="span10">
 			<p class="sectionHeadings">About the Trainer</p>
 
     		  	<p>Ronnie Carda has been devoted to helping others achieve their fitness goals for 
@@ -25,9 +29,11 @@
 				the progress being made by the individuals he is working with.
 			</p>
 		</div>
+		
+	</div>
 
-	
-		<div class="span6">
+	<div class="row-fluid">
+		<div class="span12" id="credentials">
 			<p class="sectionHeadings">Credentials and Accolades</p>
 			<ul>
 				<li>1990 - Ph D, Biodynamics</ br>
