--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -53,9 +53,11 @@
 				<li>NSCA Certified Strength and Conditioning Specialist</li>
 				<li>Successful high school track and cross-country coach</li>
 				<li>Coach for a college running club </li>
-				<li>Experience training one-on-one and group distance training with many individuals</li>
+				<li>Experience training one-on-one and group distance training with many 
+					individuals-from beginners to Olympic Trials qualifiers</li>
 				<li>18 Years experience instructing university marathon training class</li>
 				<li>10+ years online marathon class through university alumni association</li>
+				<li>8 years coach Leukemia TNT half and full marathons</li>
 				<li>Coached Leukemia Team In Training half and full marathoners - both walkers 
 					and runners, for 8 years</li>
 				<li>Lifelong runner</li>
