--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -41,8 +41,8 @@
 	<div class="row-fluid">
 		
 		<div class="span12" id="choice">
-			<p class="sectionHeadings">Next Level Distance Running-The Right Choice</p>
-			<p><strong>Why might you need a trainer?</strong>
+			<p class="sectionHeadings">Next Level Distance Running - The Right Choice</p>
+			<p><strong>Why might you need a trainer?</strong><br />
 				There are a number of reasons that individuals obtain a trainer's assistance.  A 
 				trainer can provide the needed structure or direction in your training.  A trainer 
 				can provide the needed variety of training activities to help you achieve your 
@@ -51,7 +51,7 @@
 				commitment that you are making to yourself and in doing so, you are 
 				re-enforcing your commitment to achieve your goals. 
 			</p>
-			<p><strong>How can a trainer help you?</strong>
+			<p><strong>How a trainer can help you</strong><br />
 				A trainer can help you develop a good training routine, one that is designed to 
 				fit your needs, based on your time availability, fitness level, and many other 
 				factors.  A trainer can help you understand why you are doing the training and 
@@ -61,7 +61,7 @@
 				you should know what you are trying to accomplish in this workout and this can 
 				occur with the help of a trainer.
 			</p>
-			<p><strong>What a trainer can do for you</strong> - A trainer can make the training more enjoyable.  
+			<p><strong>What a trainer can do for you</strong><br />A trainer can make the training more enjoyable.  
 				A trainer can take your feedback and utilize this to develop workouts that meet 
 				your specific needs.  A trainer can analyze your running form and make 
 				suggestions on how to improve your running economy.  A trainer can identify 
@@ -93,25 +93,25 @@
 	<div class="row-fluid" id="homePackages">
 		<div class="span12">
 			<p class="sectionHeadings">Packages Offered</p>
-			
-			<p><strong>Online Training Program</strong></p>
-			
-			<p>The Online Training Package is an excellent choice for runners seeking to reach 
-				the next level on their own.  This package offers great videos and power points 
-				that help you learn about preparing yourself for any event.  You will 
-				communicate with the trainer weekly to coordinate a plan and adjust it as 
-				needed.  <strong><%= link_to "  Click here",    training_programs_path %></strong>
+
+			<p><strong>Online Training Program</strong><br />The Online Training Package is an 
+				excellent choice for runners seeking to reach the next level on their own.  This 
+				package offers great videos and power points that help you learn about preparing 
+				yourself for any event.  You will communicate with the trainer weekly to 
+				coordinate a plan and adjust it as needed.  
+				<strong><%= link_to "  Click here",    training_programs_path %></strong>
 			       to get all of the details of this package and the pricing.
 			</p>
-				 
-	    		<p><strong>Face to Face Training Program</strong></p>
-	      		
-			<p>This is the best training package to optimize your effort with your trainer and to stay on
+
+			<p><strong>Face to Face Training Program</strong><br />This is the best training 
+				package to optimize your effort with your trainer and to stay on
 				course with your training plan.  In addition to all of the benefits of the Online
 				Training Package, the Face to Face Training Package also includes one on one 
 				time with the trainer during your weekly meeting, and your weekly 
-				communication session online.<strong><%= link_to "  Click here ",    training_programs_path %></strong>
-			      	for more information regarding the Face to Face Training Package.</p>
+				communication session online.<strong>
+				<%= link_to "  Click here ",    training_programs_path %></strong>
+			      	for more information regarding the Face to Face Training Package.
+			</p>
 		 </div>
 	
 	</div>
