wife's changes made

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -24,7 +24,7 @@
 				
 			<p>Ronnie is proud to have trained two individuals (one man, one woman) to 
 				run in their first marathons.  With his guidance they went on to qualify for the 
-				U.S. Olympic Trials.  Ronnie is equally proud of his success in assisting runner of
+				U.S. Olympic Trials.  Ronnie is equally proud of his success in assisting runners of
 				all abilities achieve their running goals.  He gets great satisfaction from observing
 				the progress being made by the individuals he is working with.
 			</p>
@@ -37,8 +37,7 @@
 			<p class="sectionHeadings">Credentials and Accolades</p>
 			<ul>
 				<li>1990 - Ph D, Biodynamics</ br>
-					University of Wisconsin - Madison</ br>
-					Madison, Wisconsin
+					University of Wisconsin-Madison</ br>
 				</li>
 			
 				<li>1983 - MS, Physical Education</ br>
