--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
 		<p class="opening" id="new">Are you new to running?</p>
 		<p class="opening" id="nextLevel">Interested in taking your running to the next level?<p>
 		<p class="opening" id="challenge">Searching for a new running challenge similar to a half or full marathon?</p>
-		<p class="opening" id="performance">Perhaps your trying to improve your running performance times/set a new PR?</p>
+		<p class="opening" id="performance">Perhaps you're trying to improve your running performance times/set a new PR?</p>
 		<h3 id="distance">Next Level Distance Running can help you achieve these goals!</h3>
 	</div>
 	<div class="row-fluid">
