span changed on home page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -92,6 +92,12 @@ label {
   float: left;
 }
 
+span {
+	font-weight: bold;
+	font-size: 12pt;
+	color: red;
+}
+
 //Title art
 #titleText {
 	width: 80%;
