--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -69,7 +69,7 @@
 				provide helpful suggestions for race pace and race strategy so you will get the 
 				most from your training and event experience.
 			</p>
-			<p>Invest in yourself!  Your time commitment and race entry fee, especially for a 
+			<p><span>Invest in yourself!</span>  Your time commitment and race entry fee, especially for a 
 				half or full marathon, are significant. You want to get the most out of your 
 				investment to have a positive race experience and achieve your goals.
 			</p>
