all revisions implemented per Ronnie's request

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -22,11 +22,12 @@
 				experience will prove to be invaluable.   
     		   	</p>
 				
-			<p>Ronnie is proud to have trained two individuals (one man, one woman) to 
-				run in their first marathons.  With his guidance they went on to qualify for the 
-				U.S. Olympic Trials.  Ronnie is equally proud of his success in assisting runners of
-				all abilities achieve their running goals.  He gets great satisfaction from observing
-				the progress being made by the individuals he is working with.
+			<p>Two individuals that trained for their first marathons with Ronnie, one man and 
+				one woman, went on to qualify for the U.S. Olympic trials.  These are only a 
+				couple of the successful training experiences individuals have had training with 
+				him.  Ronnie is equally proud of his success in assisting runners of all abilities in 
+				achieving their running goals. He gets great satisfaction from observing the 
+				progress that is made by the individuals with whom he is working.
 			</p>
 		</div>
 		
@@ -36,34 +37,28 @@
 		<div class="span12" id="credentials">
 			<p class="sectionHeadings">Credentials and Accolades</p>
 			<ul>
-				<li>1990 - Ph D, Biodynamics</ br>
-					University of Wisconsin-Madison</ br>
+				<li>1990 - Ph D, Biodynamics
+					University of Wisconsin-Madison
 				</li>
-			
-				<li>1983 - MS, Physical Education</ br>
-					South Dakota State University</ br>
+				<li>1983 - MS, Physical Education
+					South Dakota State University
 					Brookings, South Dakota
 				</li>
-				
-				<li>1979 - BS, Physical Education/History, Athletic Coaching</ br>
-					Black Hills State University</ br>
+				<li>1979 - BS, Physical Education/History, Athletic Coaching
+					Black Hills State University
 					Spearfish, South Dakota
 				</li>
 				<li>NSCA Certified Strength and Conditioning Specialist</li>
-				<li>Successful high school track and cross-country coach</li>
-				<li>Coach for a college running club </li>
 				<li>Experience training one-on-one and group distance training with many 
-					individuals-from beginners to Olympic Trials qualifiers</li>
+					individuals-from beginners to Olympic Trials qualifiers
+				</li>
 				<li>18 Years experience instructing university marathon training class</li>
 				<li>10+ years online marathon class through university alumni association</li>
 				<li>8 years coach Leukemia TNT half and full marathons</li>
-				<li>Coached Leukemia Team In Training half and full marathoners - both walkers 
-					and runners, for 8 years</li>
 				<li>Lifelong runner</li>
-				<li>Ronnie Carda has run in over 50 marathons and half marathons, and he  
-					still actively trains to participate in these events.
-				</li>  
-				
+				<li>Ronnie Carda has run in over 50 marathons and half marathons as a lifelong
+					runner, and he still actively trains to participate in these events
+				</li>  	
 			</ul>
 		</div>
 	</div>
