--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -7,7 +7,7 @@
 	<%= render 'layouts/addressDiv' %>
 	<br />
 	<h3>If you have any questions or concerns please email Ronnie Carda at:
-		<%= mail_to('rdcarda@facstaff.wisc.edu') %>
+		<%= mail_to('Ronnie@cardarunning.com') %>
 	</h3>
 </div>
 
