--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,13 +7,16 @@
 	<div class="center hero-unit">
 		<p class="opening" id="new">Are you new to running?</p>
 		<p class="opening" id="nextLevel">Interested in taking your running to the next level?<p>
-		<p class="opening" id="challenge">Searching for a new running challenge similar to a half or full marathon?</p>
-		<p class="opening" id="performance">Perhaps you're trying to improve your running performance times/set a new PR?</p>
+		<p class="opening" id="challenge">Searching for a new running challenge such as a half 
+			or full marathon?
+		</p>
+		<p class="opening" id="performance">Perhaps you're trying to improve your running 
+			performance times/set a new PR?
+		</p>
 		<h3 id="distance">Next Level Distance Running can help you achieve these goals!</h3>
 	</div>
 	<div class="row-fluid">
-		
-		<div class="span4">
+		<div class="span6">
 			<p class="sectionHeadings">My Training Philosophy</p>
 		
 			<p>As your trainer, my objective is to assist you in accomplishing your distance 
@@ -33,7 +36,7 @@
 			</p>
 		</div>
 		
-		<div class="span8 runningPic">
+		<div class="span6 runningPic">
 			<%= image_tag("runner_jogging_morning.jpg") %>
 		</div>
 	</div>
