--- a/app/views/static_pages/training_programs.html.erb
+++ b/app/views/static_pages/training_programs.html.erb
@@ -7,60 +7,76 @@
 <div class="container-fluid">
 	<%= render 'layouts/addressDiv' %>
 	<div class="row-fluid">
-		<div class="span4">
+		<div class="span6">
 			<p class="sectionHeadings">Online Training Program</p>
 
 			<p>The Online Training Package is an excellent choice for runners seeking to reach 
 				the next level on their own.  This package offers great videos and power points 
 				that help you learn about preparing yourself for any event.  You will 
-				communicate with the trainer weekly to coordinate a plan and adjust it as 
-				needed.
-				
-				<ul>
-					<li>Online power points and training videos cover various topics including:</li>
-						<ul>
-				            		<li>Running form</li>
-				            		<li>Nutrition</li>
-				            		<li>Injury prevention and treatment</li>
-				            		<li>Program design</li>
-				            		<li>Event preparation</li>
-				            		<li>Event strategy</li>
-							<li class="price">Season Cost: $200.00</li>
-						</ul>
-				</ul>
+				communicate with the trainer at least once every other week.
 			</p>
-		</div>
 
-	
-		<div class="span4">
+			<p>With the online program you will receive:</p>
+			
+			<ul>
+				<li>Personalized training program designed to meet your individual needs</li>
+				<li>Bi-monthly training log check-in</li>
+				 <li>Ongoing training adjustments to your training program</li>
+				 <li>Online power point information which covers various topics such as:</li>
+					<ul>
+						<li>Running form</li>
+				            	<li>Nutrition</li>
+				         	<li>Injury prevention and treatment</li>
+				           	<li>Program design</li>
+				            	<li>Event preparation</li>
+				            	<li>Event strategy</li>
+						<li class="price">Season Cost: $200.00</li>
+					</ul>
+			</ul>
+		</div>
+		<div class="span6">
+			<%= image_tag("landscape_mountains_sky.jpg") %>
+		</div>
+	</div>
+
+	<div class="row-fluid">
+		<div class="span6">
 			<p class="sectionHeadings">Face to Face Training Program</p>
 			
 			<p>This is the best training package to optimize your effort with your trainer and to stay on
 				course with your training plan.  In addition to all of the benefits of the online
 				package, the Face to Face Training Program also includes the following program
 				benefits:
-				<ul>
-			        <li>Personalized training program designed to meet your individual needs</li>     
-			        <li>Check-in with your own bi-weekly training log</li>
-			        <li>Ongoing training adjustments to your training program</li>
-			        <li>Ask the trainer access</li>
-				 <li class="price">Season Cost: $300.00</li>
 			</p>
-
+				<ul>
+			        	<li>Ask the trainer access</li>
+					<li>Running form analysis</li>
+					<li>Weekly group workouts</li>
+					<ul>
+						<li>includes warm-up activities, various workout types, cool down 
+							and stretching activities, core training activities and strength 
+							training ideas
+						</li>
+					</ul> 
+						
+				 	<li class="price">Season Cost: $300.00</li>
+				</ul>	
 		</div>
-		
-		<div class="span4">
+			
+		<div class="span6">
 	
 			<p class="sectionHeadings">Workout Types</p>
-			<p>Group workouts will be individualized according to pace and volume and will include:
+			<p>Group workouts will be individualized according to pace and volume and will 
+				include:
+			</p>
 				<ul>
 					<li>Group distance runs</li>
 					<li>Tempo Runs</li>
 					<li>Hill workouts</li>
 					<li>Interval Workouts</li>
 				</ul>
-			</p>
-		</div>	
+		</div>
+	</div>	
 </div>
 </br>
 
