test for mobile

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,7 @@
 <div class="container-fluid artTitle">
-	<%= render 'layouts/titleArt' %>
+	<div class="col-xs-12 col-sm-12">
+		<%= render 'layouts/titleArt' %>
+	</div>
 </div>
 
 <div class="container-fluid">
