test for mobile

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,8 @@
 <div class="container-fluid artTitle">
-	<div class="col-xs-12 col-sm-12">
-		<%= render 'layouts/titleArt' %>
+	<div class="row-fluid">
+		<div class="col-xs-12 col-sm-12">
+			<%= render 'layouts/titleArt' %>
+		</div>
 	</div>
 </div>
 
