--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,12 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-inner">
-    <div class="container-fluid">
-      <%= link_to image_tag("carda_training_logo.png", :id=> "logo"), root_path %>
-      <nav>
-        <ul class="nav pull-right">
-          <li><%= link_to "Home",    root_path %></li>
-          <li><%= link_to "Training Programs",    training_programs_path %></li>
-          <li><%= link_to "About the Trainer",    about_path %></li>
-          <li><%= link_to "Contact",    contact_path %></li>
-        </ul>
-      </nav>
-    </div>
-  </div>
-</header>
+<div class="container-fluid" id="artContainer">
+	<div class="row">
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+			<%= render 'layouts/menu' %>
+		</div>
+	</div>
+	<div class="row logo">
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-offset-3 col-lg-offset-3 logo">
+			<%= image_tag("nldr_text2.png") %>
+		</div>
+	</div>
+</div>
