--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-inverse" role="navigation">
 	<div class="container-fluid">
 	    	<!-- Brand and toggle get grouped for better mobile display -->
 	    	<div class="navbar-header">
@@ -13,11 +13,11 @@
 
 	    	<!-- Collect the nav links, forms, and other content for toggling -->
 	    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav nav-pills">
-	        		<li ><%= link_to "Home",    root_path %></li>
-			        <li><%= link_to "Training Programs",    training_programs_path %></li>
-			        <li><%= link_to "About the Trainer",    about_path %></li>
-			        <li><%= link_to "Contact",    contact_path %></li>
+			<ul class="nav navbar-nav">
+	        		<li><%= link_to "Home",    root_path, :class =>"navList" %></li><br />
+			        <li><%= link_to "Training Programs",    training_programs_path, :class =>"navList" %></li><br />
+			        <li><%= link_to "About the Trainer",    about_path, :class =>"navList" %></li><br />
+			        <li><%= link_to "Contact",    contact_path, :class =>"navList" %></li>
 			</ul>
 	    	</div>
 	</div>
