--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,15 +4,12 @@
 			<%= render 'layouts/menu' %>
 		</div>
 	
-		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 logo">
-			<%= image_tag("nldr_text2.png") %>
-		</div>
-		<div class="col-xs-6 col-sm-6 col-md-1 col-lg-1 col-md-offset-1 col-lg-offset-1 text-center">
-			<%= link_to(image_tag("facebook_icon.png"), "https://www.facebook.com/cardatraining", :id => "facebook", :title =>"Facebook") %>
-		</div>
-		<div class="col-xs-6 col-sm-6 col-md-1 col-lg-1 text-center">
-			<%= link_to(image_tag("paypal.png"), "https://www.paypal.com/", :id => "paypal", :title =>"PayPal") %>
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+			<%= image_tag("nldr_text2.png", :id=> "art") %>
 		</div>
 		
+		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+			<p id="tester">Located in Madison, Wisconsin</p>
+		</div>
 	</div>
 </div>
