--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,11 +1,6 @@
 <% provide(:title, 'About the Trainer') %>
 
-<div class="container-fluid artTitle">
-	<%= render 'layouts/titleArt' %>
-</div>
-
-<div class="container-fluid">
-	<%= render 'layouts/addressDiv' %>
+<div class="container">
 	<div class="row-fluid">
 		<div class="span2">
 			<%= image_tag("ronnie.jpg") %>
