--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-inverse" role="navigation">
-	<div class="container-fluid">
+<nav class="navbar navbar-default" role="navigation">
+	<div class="container">
 	    	<!-- Brand and toggle get grouped for better mobile display -->
 	    	<div class="navbar-header">
 	      		<button type="button" class="navbar-toggle" data-toggle="collapse" 
@@ -13,7 +13,7 @@
 
 	    	<!-- Collect the nav links, forms, and other content for toggling -->
 	    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav">
+			<ul class="nav navbar-nav pull-right">
 	        		<li><%= link_to "Home",    root_path, :class =>"navList" %></li><br />
 			        <li><%= link_to "Training Programs",    training_programs_path, :class =>"navList" %></li><br />
 			        <li><%= link_to "About the Trainer",    about_path, :class =>"navList" %></li><br />
