--- a/app/views/static_pages/training_programs.html.erb
+++ b/app/views/static_pages/training_programs.html.erb
@@ -1,13 +1,9 @@
-<% provide(:title, 'Training Plans') %>
-<div class="container-fluid artTitle">
-	<%= render 'layouts/titleArt' %>
-</div>
+<% provide(:title, 'Training Programs') %>
 
-
-<div class="container-fluid">
+<div class="container">
 	<%= render 'layouts/addressDiv' %>
-	<div class="row-fluid">
-		<div class="span6">
+	<div class="row">
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 			<p class="sectionHeadings">Online Training Program</p>
 
 			<p>The Online Training Package is an excellent choice for runners seeking to reach 
@@ -34,7 +30,7 @@
 					</ul>
 			</ul>
 		</div>
-		<div class="span6">
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 			<%= image_tag("landscape_mountains_sky.jpg") %>
 		</div>
 	</div>
